[tool.poetry]
name = "tools-openverse"
version = "0.1.0"
description = ""
authors = ["Javicle <supergamer.08.2006@gmail.com>"]


packages = [
    { include = "tools_openverse" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
redis = "^5.2.1"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
