[tool.black]
line-length = 100
skip-string-normalization = false

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.poetry]
name = "tools-openverse"
version = "0.1.0"
description = ""
authors = ["Javicle <supergamer.08.2006@gmail.com>"]


packages = [
    { include = "tools_openverse" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
redis = "^5.2.1"
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.7.0"
setuptools = "^75.6.0"
python-dotenv = "^1.0.1"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.14.1"
black = "^24.10.0"
pylint = "^3.3.3"
httpx = "^0.28.1"
rich = "^13.9.4"
sqlalchemy = "^2.0.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
